--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,98 @@ body {
   box-sizing: border-box;
   
 }
+
 .movie-app > .row {
-  
+  display: flex;
   flex-wrap: nowrap;
+  gap: 20px; /* Büyük ekranlarda kartlar yan yana */
+
+}
+
+.image-container{
+  position: relative;
+  transition: transform 0.2s;
+}
+.image-container:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.image-container:hover .overlay{
+  opacity: 1;
+}
+
+.overlay{
+  position: absolute;
+  background: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  transition: 0.5s ease;
+  opacity: 0;
+  bottom: 0;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+@media (max-width: 855px) {
+  .movie-app > .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px; 
+  }
+  .image-container{
+    position: relative;
+    transition: transform 0.2s;
+  }
+  .image-container:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+  
+  .image-container:hover .overlay{
+    opacity: 1;
+  }
+  
+  .overlay{
+    position: absolute;
+    background: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    transition: 0.5s ease;
+    opacity: 0;
+    bottom: 0;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+  }
 }
 
 
+@media (min-width: 856px) and (max-width: 1800px) {
+  .movie-app > .row {
+    gap: 160px; 
+  }
+  .image-container{
+    position: relative;
+    transition: transform 0.2s;
+  }
+  .image-container:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+  
+  .image-container:hover .overlay{
+    opacity: 1;
+  }
+  
+  .overlay{
+    position: absolute;
+    background: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    transition: 0.5s ease;
+    opacity: 0;
+    bottom: 0;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+  }
+}
